# CursorEye

./: CONTRIBUTORS.md  LICENSE  MOS CURSOR EYE.xlsx  README.md  cursoreye_mos_form.html  pyproject.toml  run.py
face_control/: __init__.py  __main__.py  actions.py  config.py  controller.py  enums.py  keyboard.py  main.py  utils.py
