[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "face-control"
version = "0.1.0"
description = "Face control system for motor-impaired users"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "pyautogui",
    "pygetwindow",
]

[project.scripts]
face-control = "face_control.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["face_control*"]
